Update: (Fixes #879) Dropdown increase spacing of `.dropdown-header` and `.dropdown-subheader`
New: Dropdown added option to configure `$dropdown-header-margin-bottom`, `$dropdown-header-margin-top`, `$dropdown-subheader-margin-bottom`, `$dropdown-subheader-margin-top`

--- a/packages/clay-css/src/scss/atlas/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_dropdowns.scss
@@ -13,8 +13,10 @@ $dropdown-item-padding-y: 0.5rem !default; // 8px
 
 $dropdown-header-color: $secondary !default;
 $dropdown-header-font-size: 0.875rem !default; // 14px
+$dropdown-header-margin-top: 0.625rem !default; // 10px
 
 $dropdown-subheader-font-size: 0.75rem !default; // 12px
+$dropdown-subheader-margin-top: 0.625rem !default; // 10px
 
 $dropdown-link-color: $secondary !default;
 $dropdown-link-hover-color: $body-color !default;
